attempting a fix for the weird zoom in on the about page on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 body {
   padding: 0px;
   margin: 0px;
-  overflow-x: hidden;
+  
 }
 
 .body {
